grid gap corrected

--- a/required/custom.css
+++ b/required/custom.css
@@ -2876,9 +2876,10 @@ div[class*=box] {
 .connect-grid {
 	display: grid;
 	grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
+	grid-auto-rows: minmax(min-content, max-content);
 	justify-content: center;
 	justify-items: center;
-	grid-row-gap: 2%;
+	grid-row-gap: 25px;
 	margin-bottom: 20px
 }
 
